--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,25 +1,10 @@
-html, body {
-  background-color: #fff;
-  color: #000;
-  letter-spacing: 0.5px;
-  font-family: "Source Sans Pro", Arial, sans-serif;
-  height: 100vh;
-  margin: 0;
+/**
+ * Fix tracking issue for right-aligned text.
+ */
+.tracked-mega {
+    margin-right: -0.25em;
 }
 
-footer {
-  padding: 20px;
-  text-align: center;
-  border-top: 1px solid #ddd;
-}
-
-a, a:hover, a:focus, a:visited {
-  color: #000;
-}
-
-.logo {
-  width: 100%;
-  height: auto;
-  max-width: 400px;
-  max-height: 289px;
+.button-reset svg {
+    top: -1px;
 }
