--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,36 @@
+@import url('https://rsms.me/inter/inter.css');
+
+:root {
+    --color-bg: #f5f5f5;
+    --color-text: #717474;
+    --color-heading: #16191b;
+}
+
+html {
+    font-family: 'Inter', sans-serif;
+    color: #212529;
+}
+
 *,
 *::before,
 *::after {
     box-sizing: border-box;
 }
 
+body {
+    overscroll-behavior: none;
+}
+
+.b {
+    font-weight: 600;
+}
+
+.sticky {
+    position: sticky;
+}
+
 /**
- * Fix tracking issue for right-aligned text.
+  Fix tracking issue for right-aligned text.
  */
 .tracked-mega {
     margin-right: -0.25em;
@@ -13,4 +38,17 @@
 
 .button-reset svg {
     top: -1px;
+}
+
+/**
+  `page` is the default transition name.
+  @see https://nuxtjs.org/guide/routing#transitions
+ */
+.page-enter-active,
+.page-leave-active {
+    transition: opacity 200ms ease-in;
+}
+.page-enter,
+.page-leave-to {
+    opacity: 0;
 }
