--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,9 @@
 @import url('https://rsms.me/inter/inter.css');
 
+@viewport {
+    width: device-width;
+}
+
 :root {
     --color-bg: #f5f5f5;
     --color-text: #717474;
@@ -29,6 +33,15 @@ body {
     position: sticky;
 }
 
+.shadow-a {
+    box-shadow: rgba(0, 0, 0, 0.12) 0 2px 10px,
+        0 20px 50px 0 rgba(0, 0, 0, 0.14);
+}
+
+.shadow-b {
+    box-shadow: rgba(0, 0, 0, 0.12) 0 2px 10px, 0 50px 50px 0 rgba(0, 0, 0, 0.1);
+}
+
 /**
   Fix tracking issue for right-aligned text.
  */
@@ -41,6 +54,8 @@ body {
 }
 
 /**
+  Page transition effects.
+
   `page` is the default transition name.
   @see https://nuxtjs.org/guide/routing#transitions
  */
