--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,6 +13,7 @@
     --grey-3: #c2c3c4;
     --grey-4: #9b9e9d;
     --grey-6: #717474;
+    --grey-7: #495057;
     --grey-8: #212529;
     --grey-9: #16191b;
 
@@ -36,14 +37,25 @@ body {
     overscroll-behavior: none;
 }
 
+/**
+  Tachyons overrides.
+ */
 .b {
     font-weight: 600;
+}
+
+code,
+.code {
+    font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', monospace;
 }
 
 .sticky {
     position: sticky;
 }
 
+/**
+  Tachyons-like utility classes.
+ */
 .shadow-a {
     box-shadow: rgba(0, 0, 0, 0.12) 0 2px 10px,
         0 20px 50px 0 rgba(0, 0, 0, 0.14);
@@ -62,6 +74,11 @@ body {
 
 .button-reset svg {
     top: -1px;
+}
+
+.nuxt-link-active {
+    color: var(--grey-9);
+    border-bottom: 0.125rem solid currentColor;
 }
 
 /**
