Update content `code` styling; fixes #47

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,7 +46,12 @@ body {
 
 code,
 .code {
-    font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', monospace;
+    font-family: 'SF Mono',
+ 'SFMono-Regular',
+ Consolas,
+ 'Liberation Mono',
+ Menlo,
+        monospace;
 }
 
 .sticky {
