Add Masthead component with blend-mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,6 +74,10 @@ code,
     background-color: var(--grey-1);
 }
 
+.mix-burn {
+    mix-blend-mode: color-burn;
+}
+
 /**
   Fix tracking issue for right-aligned text.
  */
