--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -70,6 +70,14 @@ code,
     box-shadow: rgba(0, 0, 0, 0.12) 0 2px 10px, 0 50px 50px 0 rgba(0, 0, 0, 0.1);
 }
 
+.bg-grey-100 {
+    background-color: var(--grey-1);
+}
+
+.mix-burn {
+    mix-blend-mode: color-burn;
+}
+
 /**
   Fix tracking issue for right-aligned text.
  */
