--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,52 +26,15 @@
     --blue-7: #1c7ed6;
 }
 
-html {
-    font-family: 'Inter', sans-serif;
-    color: #212529;
-}
-
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
 body {
     overscroll-behavior: none;
 }
 
-/**
-  Tachyons overrides.
- */
-.b {
-    font-weight: 600;
-}
-
 code,
 .code {
-    font-family: 'SF Mono',
- 'SFMono-Regular',
- Consolas,
- 'Liberation Mono',
- Menlo,
+    /* stylelint-disable-next-line value-list-comma-newline-after */
+    font-family: 'SF Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo,
         monospace;
-}
-
-/**
-  Tachyons-like utility classes.
- */
-.shadow-a {
-    box-shadow: rgba(0, 0, 0, 0.12) 0 2px 10px,
-        0 20px 50px 0 rgba(0, 0, 0, 0.14);
-}
-
-.shadow-b {
-    box-shadow: rgba(0, 0, 0, 0.12) 0 2px 10px, 0 50px 50px 0 rgba(0, 0, 0, 0.1);
-}
-
-.bg-grey-100 {
-    background-color: var(--grey-1);
 }
 
 .mix-burn {
@@ -85,12 +48,7 @@ code,
     margin-right: -0.25em;
 }
 
-.button-reset svg {
-    top: -1px;
-}
-
 .nuxt-link-active {
-    color: var(--grey-9);
     border-bottom: 0.125rem solid currentColor;
 }
 
