--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -5,46 +5,45 @@
 @import 'tailwindcss/utilities';
 
 @viewport {
-    width: device-width;
+	width: device-width;
 }
 
 :root {
-    --color-bg: #f5f5f5;
-    --color-text: #717474;
-    --color-heading: #16191b;
+	--color-bg: #f5f5f5;
+	--color-text: #717474;
+	--color-heading: #16191b;
 
-    --grey-1: #f5f5f5;
-    --grey-3: #c2c3c4;
-    --grey-4: #9b9e9d;
-    --grey-6: #717474;
-    --grey-7: #495057;
-    --grey-8: #212529;
-    --grey-9: #16191b;
+	--grey-1: #f5f5f5;
+	--grey-3: #c2c3c4;
+	--grey-4: #9b9e9d;
+	--grey-6: #717474;
+	--grey-7: #495057;
+	--grey-8: #212529;
+	--grey-9: #16191b;
 
-    --blue-5: #339af0;
-    --blue-6: #228be6;
-    --blue-7: #1c7ed6;
+	--blue-5: #339af0;
+	--blue-6: #228be6;
+	--blue-7: #1c7ed6;
 }
 
 code,
 .code {
-    font-family: 'SF Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo,
-        monospace;
+	font-family: 'SF Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, monospace;
 }
 
 .mix-burn {
-    mix-blend-mode: color-burn;
+	mix-blend-mode: color-burn;
 }
 
 /**
   Fix tracking issue for right-aligned text.
  */
 .tracking-mega {
-    margin-right: -0.25em;
+	margin-right: -0.25em;
 }
 
 .router-link-active {
-    border-bottom: 0.125rem solid currentColor;
+	border-bottom: 0.125rem solid currentColor;
 }
 
 /**
@@ -55,9 +54,9 @@ code,
  */
 .page-enter-active,
 .page-leave-active {
-    transition: opacity 200ms ease-in;
+	transition: opacity 200ms ease-in;
 }
 .page-enter,
 .page-leave-to {
-    opacity: 0;
+	opacity: 0;
 }
