--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,18 +1,12 @@
-@import url('https://rsms.me/inter/inter.css');
-
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
-
-@viewport {
-	width: device-width;
-}
+@import url("https://rsms.me/inter/inter.css");
+@import url("tailwindcss/base");
+@import url("tailwindcss/components");
+@import url("tailwindcss/utilities");
 
 :root {
 	--color-bg: #f5f5f5;
 	--color-text: #717474;
 	--color-heading: #16191b;
-
 	--grey-1: #f5f5f5;
 	--grey-3: #c2c3c4;
 	--grey-4: #9b9e9d;
@@ -20,7 +14,6 @@
 	--grey-7: #495057;
 	--grey-8: #212529;
 	--grey-9: #16191b;
-
 	--blue-5: #339af0;
 	--blue-6: #228be6;
 	--blue-7: #1c7ed6;
@@ -28,7 +21,7 @@
 
 code,
 .code {
-	font-family: 'SF Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, monospace;
+	font-family: "SF Mono", SFMono-Regular, Consolas, "Liberation Mono", Menlo, monospace;
 }
 
 .mix-burn {
@@ -39,11 +32,11 @@ code,
   Fix tracking issue for right-aligned text.
  */
 .tracking-mega {
-	margin-right: -0.25em;
+	margin-inline-end: -0.25em;
 }
 
 .router-link-active {
-	border-bottom: 0.125rem solid currentColor;
+	border-block-end: 0.125rem solid currentcolor;
 }
 
 /**
@@ -56,6 +49,7 @@ code,
 .page-leave-active {
 	transition: opacity 200ms ease-in;
 }
+
 .page-enter,
 .page-leave-to {
 	opacity: 0;
